<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.example.mastek.blue.deep.swasthtesting.Dashboard;">



            <LinearLayout
                android:padding="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="horizontal">

                <FrameLayout
                    android:padding="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:clickable="true">

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="1"

                        android:background="@drawable/icon"
                        android:clickable="true"
                        android:padding="24dp"
                        android:src="@drawable/ic_currency_inr_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="0dp"
                        android:layout_marginTop="118dp"
                        android:alpha="1"
                        android:textColor="#000000"
                        android:clickable="true"
                        android:gravity="bottom"
                        android:text="@string/credits_text_view"
                        android:textAllCaps="true" />

                </FrameLayout>


                <FrameLayout
                    android:padding="0dp"
                    android:id="@+id/helpline"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:background="#ffffff"
                    android:clickable="true">

                    <ImageButton
                        android:id="@+id/barcode_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginStart="0dp"
                        android:alpha="1"
                        android:layout_gravity="center"
                        android:background="@drawable/icon"
                        android:clickable="true"
                        android:padding="24dp"
                        android:src="@drawable/ic_barcode_scan_black_24dp" />

                    <TextView
                        android:id="@+id/barcode_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="118dp"
                        android:textColor="#000000"
                        android:alpha="1"
                        android:clickable="true"
                        android:text="@string/barcode_text_view"
                        android:textAllCaps="true" />

                </FrameLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="2dp"
                android:id="@+id/imageView2"
                android:background="#f5f5f5"
                android:layout_gravity="center"
                android:layout_alignTop="@+id/imageView"
                android:layout_centerHorizontal="true" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:orientation="horizontal">

                <FrameLayout
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:clickable="true">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="1"

                        android:background="@drawable/icon"
                        android:clickable="true"
                        android:padding="24dp"
                        android:src="@drawable/ic_account_multiple_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="0dp"
                        android:layout_marginTop="118dp"
                        android:alpha="1"
                        android:textColor="#000000"
                        android:clickable="true"
                        android:gravity="bottom"
                        android:text="@string/family_text_view"
                        android:textAllCaps="true" />

                </FrameLayout>


                <FrameLayout
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:background="#ffffff"
                    android:clickable="true">

                    <ImageButton
                        android:id="@+id/centers_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginStart="0dp"
                        android:alpha="1"
                        android:background="@drawable/icon"
                        android:clickable="true"
                        android:paddingBottom="30dp"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:paddingTop="18dp"
                        android:src="@drawable/ic_google_maps_black_24dp" />

                    <TextView
                        android:id="@+id/centers_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="118dp"
                        android:textColor="#000000"
                        android:alpha="1"
                        android:clickable="true"
                        android:text="@string/centers_text_view"
                        android:textAllCaps="true" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/feedbackLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/feedback_icon"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    android:contentDescription="@string/feedback"
                    android:src="@drawable/ic_clipboard_text_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:alpha="1"
                    android:textColor="#000000"
                    android:text="@string/feedback"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    android:textStyle="normal" />

            </LinearLayout>


        </LinearLayout>



    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="24dp"
            android:background="#26A69A"
            android:padding="12dp"
            android:text="@string/card_no_textview"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="normal" />


    </RelativeLayout>


</RelativeLayout>